--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,21 +13,22 @@
         </Grid.ColumnDefinitions>
         <StackPanel>
             <Label Content="Kategória"/>
-            <ComboBox x:Name="cbKategoria"/>
+            <ComboBox x:Name="cbKategoria"
+                      DropDownClosed="cbKategoria_DropDownClosed"/>
             <Label Content="Gyártó"/>
-            <ComboBox x:Name="cbGyarto"/>
+            <ComboBox x:Name="cbGyarto"
+                      DropDownClosed="cbGyarto_DropDownClosed"/>
             <Label Content="Keresés a terméknévben"/>
             <TextBox x:Name="txtTermek"
-                     Background="LightGreen"/>
-            <Button x:Name="btnSzukit"
-                    Margin="0 20 0 0"
-                    Content="Szűrés a feltételekre" Click="btnSzukit_Click"/>
+                     Background="LightGreen" TextChanged="txtTermek_TextChanged"/>
             <Button x:Name="btnMentes"
                     Margin="0 20 0 0"
-                    Content="Mentés CSV fájlba" Click="btnMentes_Click"/>
+                    Content="Mentés CSV fájlba"
+                    Click="btnMentes_Click"/>
             <Button x:Name="btnMentesHTML"
                     Margin="0 20 0 0"
-                    Content="Mentés HTML fájlba" Click="btnMentesHTML_Click"/>
+                    Content="Mentés HTML fájlba"
+                    Click="btnMentesHTML_Click"/>
 
         </StackPanel>
         <DataGrid  x:Name="dgTermekek" 
